minor fixes in text wrap and font

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,6 +8,7 @@ body {
     padding: 0;
     color: white;
     background-color: rgb(6, 0, 68);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .flex-column {
